# MQTTClient

./: .env.example  .gitignore  INSTRUCTION.md  Readme.md  main.py  pyproject.toml  test_llm_feature.py
src/mqtt_client/: __init__.py  config.py  main.py  main_fixed.py  main_new.py  server.py
src/mqtt_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/mqtt_client/api/: __init__.py  app.py  models.py  routes.py  ws_manager.py
src/mqtt_client/api/static/: analytics.html  analytics.js  app.js  index.html  style.css
src/mqtt_client/examples/: __init__.py  alpr_test.py  image_processor_test.py  mqtt_test.py  queue_manager_test.py  queue_system_test.py
src/mqtt_client/llm/: __init__.py  analyzer.py  queue.py
src/mqtt_client/models/: __init__.py  alpr_detection.py  analysis.py  detection.py  transformers.py  validation.py
src/mqtt_client/mqtt/: __init__.py  client.py
src/mqtt_client/processors/: __init__.py  image.py  queue_manager.py  queue_system.py
tests/: __init__.py  test_image_processor.py  test_llm_fixed.py  test_llm_integration.py  test_llm_simple.py  test_llm_with_local_images.py  test_mqtt.py  test_queue_manager.py  test_queue_system.py  test_transformers.py  test_validation.py
tests/data/: sample_alpr_event.json  sample_detection.json
